// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchSidebar /> render matches filtered regions snapshot 1`] = `
<Fragment>
  <SearchSidebarstyles__Section>
    <SearchSidebarstyles__Title>
      Search
    </SearchSidebarstyles__Title>
    <Search
      indexSelectors={
        Array [
          [Function],
          undefined,
        ]
      }
      indexes={
        Array [
          "countries",
          "hotels",
        ]
      }
      onChange={[Function]}
      onSearch={[Function]}
      onSubmit={[Function]}
      searchPatterns={
        Array [
          "+isDestination:true",
        ]
      }
      searchQuery={
        Object {
          "filters": Object {
            "regions": Object {
              "selected": Array [
                "foo",
              ],
              "type": "specify",
            },
          },
        }
      }
      showSubmit={false}
      vertical={true}
    />
  </SearchSidebarstyles__Section>
  <SearchSidebarstyles__Section>
    <SearchFilters
      features={Array []}
      onChange={[Function]}
      onReset={[Function]}
      regions={
        Array [
          "foo",
          "bar",
        ]
      }
      searchQuery={
        Object {
          "filters": Object {
            "regions": Object {
              "selected": Array [
                "foo",
              ],
              "type": "specify",
            },
          },
        }
      }
      starRatings={Array []}
    />
  </SearchSidebarstyles__Section>
</Fragment>
`;

exports[`<SearchSidebar /> render matches snapshot 1`] = `
<Fragment>
  <SearchSidebarstyles__Section>
    <SearchSidebarstyles__Title>
      Search
    </SearchSidebarstyles__Title>
    <Search
      indexSelectors={
        Array [
          [Function],
          undefined,
        ]
      }
      indexes={
        Array [
          "countries",
          "hotels",
        ]
      }
      onChange={[Function]}
      onSearch={[Function]}
      onSubmit={[Function]}
      searchPatterns={
        Array [
          "+isDestination:true",
        ]
      }
      searchQuery={Object {}}
      showSubmit={false}
      vertical={true}
    />
  </SearchSidebarstyles__Section>
  <SearchSidebarstyles__Section>
    <SearchFilters
      features={Array []}
      onChange={[Function]}
      onReset={[Function]}
      regions={Array []}
      searchQuery={Object {}}
      starRatings={Array []}
    />
  </SearchSidebarstyles__Section>
</Fragment>
`;
